--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node backend.js"
+    "start": "node backend.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2"
